# erp_rpos

.claude/: settings.json
restaurant_pos/: MANIFEST.in  STAFF_TRAINING.md  pyproject.toml  requirements.txt  setup.py
restaurant_pos/restaurant_pos/: hooks.py
restaurant_pos/restaurant_pos/api/: _helpers.py  floor.py  kds.py  modifier.py  order.py  reservation.py  session.py  settlement.py  split.py
restaurant_pos/restaurant_pos/config/: desktop.py
restaurant_pos/restaurant_pos/fixtures/: desktop_icon.json
restaurant_pos/restaurant_pos/public/css/: restaurant_pos.css  rpos.css
restaurant_pos/restaurant_pos/public/js/: kds.js  pos_order_manager.js  pos_realtime.js  pos_split_bill.js  pos_table_manager.js  rpos_app.js
restaurant_pos/restaurant_pos/restaurant_pos/doctype/pos_floor/: pos_floor.json  pos_floor.py
restaurant_pos/restaurant_pos/restaurant_pos/doctype/pos_item_modifier_map/: pos_item_modifier_map.json
restaurant_pos/restaurant_pos/restaurant_pos/doctype/pos_item_routing/: pos_item_routing.json  pos_item_routing.py
restaurant_pos/restaurant_pos/restaurant_pos/doctype/pos_kitchen_station/: pos_kitchen_station.json  pos_kitchen_station.py
restaurant_pos/restaurant_pos/restaurant_pos/doctype/pos_modifier_group/: pos_modifier_group.json
restaurant_pos/restaurant_pos/restaurant_pos/doctype/pos_modifier_option/: pos_modifier_option.json
restaurant_pos/restaurant_pos/restaurant_pos/doctype/pos_order/: pos_order.json  pos_order.py
restaurant_pos/restaurant_pos/restaurant_pos/doctype/pos_order_item/: pos_order_item.json  pos_order_item.py
(+353 files in other folders)
